# Digital-Twin

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  project_bounds.json  pt_api_keys.json  test_results.txt  users_acl.json
BackendCommunicationService/: CMakeLists.txt
BackendCommunicationService/src/: BECommunicationService.cpp  BECommunicationService.h
BackendCommunicationService/src/entities/: DigitalTwin.cpp  DigitalTwin.h  TwinRequest.cpp  TwinRequest.h
DTClient/resources/: Resources.qrc
DTClient/src/Models/: DigitalTwinClientSettings.cpp  DigitalTwinClientSettings.h  MainWindowModel.cpp  MainWindowModel.h  MqttConnectionThread.cpp  MqttConnectionThread.h
DTClient/src/Models/Markdown/: MarkdownParser.h
DTClient/src/Widgets/: UploadProjectFileToBackend.cpp  UploadProjectFileToBackend.h
DTClient/src/Widgets/DigitalTwinTabWidget/: TabContentWidget.cpp
DTClient/src/Widgets/TreeViewModels/: ProjectTreeViewItem.cpp  ProjectTreeViewItem.h  ProjectTreeViewModel.cpp  ProjectTreeViewModel.h
DTClient/ui/: DigitalTwinMainWindow.ui  UploadProjectFileToBackend.ui
DTServer/: CMakeLists.txt
DTServer/src/: ApiKeyStore.cpp  ApiKeyStore.h  AuthenticationService.cpp  AuthenticationService.h  DigitalTwinServerInstanceManager.cpp  DigitalTwinServerInstanceManager.h  MqttBrokerService.cpp  MqttBrokerService.h  Session.cpp  Session.h  SubscriptionStorage.cpp  SubscriptionStorage.h  main.cpp
DigitalTwinLib/src/: DigitalTwinManager.cpp  DigitalTwinManager.h
DigitalTwinLib/src/Model/: DigitalTwinModel.cpp
PhysicalTwinCommunicationService/: CMakeLists.txt
PhysicalTwinCommunicationService/src/: PTCommunicationService.cpp
PhysicalTwinCommunicationService/src/Services/: IMqttClientService.h  MqttClientService.cpp  MqttClientService.h
hybrid_prototype/: data_generator.py  faad_model.pkl  faad_service.py  fuzzy_engine.py  if_monitor.py  live_mqtt_monitor.py  telemetry_dataset.csv  train_faad_model.py  z_score_monitor.py
tests/: faad_model.pkl  faad_service.py  get_projects.py  manual_publish.py  mock_agila_server.py  simulate_telemetry.py  test_acl.py  test_dual_layer_validation.py  test_dynamic_acl.py  test_faad_pipeline.py  test_heartbeat_attacks.py  train_faad_model.py
